--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -70,6 +70,6 @@
 
       /*^ Footer*/
       footer .down-spacing{ 
-        padding:  30px 10%;
+        padding:  30px 5%;
       }
 }
